<resources>
    <string name="app_name">SmartBlinds Application</string>
    <string name="login_button">Login</string>
    <string name="password_text">Password</string>
    <string name="re_type_password_text">Re-type Password</string>
    <string name="username_text">Username</string>
    <string name="welcome_text">SmartBlinds \n User Login</string>
    <string name="register_button">Register</string>
    <string name="username_login_text">Username</string>
    <string name="password_login_text">Password</string>
    <string name="smartblinds_login_text">SmartBlinds \n Registration</string>
    <string name="loginhome_button">Login</string>
    <string name="tempvalue_input">Tempurature Value</string>
    <string name="currenttemp_text">Current Temperature</string>
    <string name="desiredtemp_text">Desired Temperature</string>
    <string name="scheduling_image">scheduling_image</string>
    <string name="auto_image">auto_image</string>
    <string name="manual_image">manual_image</string>
    <string name="privacy_image">privacy_image</string>
    <string name="features_title_text">FEATURES</string>
    <string name="schedule_text">Schedule</string>
    <string name="auto_mode_text">Auto Mode</string>
    <string name="privacy_mode_text">Privacy Mode</string>
    <string name="manual_mode_text">Manual Mode</string>
    <string name="toggle_menu">toggle_menu</string>
    <string name="open_blinds">open_blinds</string>
    <string name="close_blinds">close_blinds</string>
    <string name="open_text">OPEN</string>
    <string name="close_text">CLOSE</string>
    <string name="privacy_mode_pp">PRIVACY MODE</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="status">IS ON</string>
    <string name="add_button">Add to Schedule</string>
    <string name="insert_time_text">insert time</string>
    <string name="time">time</string>
    <string name="up_or_down">up or down</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="desired_temperature">Desired Temperature in Celsius</string>
    <string name="full_name">Full Name</string>
    <string name="register_user">Register User</string>
    <string name="email">Email</string>
    <string name="set_time_24h_format">Set Time (24h format):</string>
    <string name="defaultFromTime">18:00</string>
    <string name="defaultToTime">06:00</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>