<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_page">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMarginStart="60dp" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="212dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:text="@string/privacy_mode_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="192dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/manual_mode_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="153dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <androidx.cardview.widget.CardView
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/privacy_image"
                app:srcCompat="@drawable/privacy_mode" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/manual_image"

                app:srcCompat="@drawable/manual_mode" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="156dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="176dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scheduling_image"
                app:srcCompat="@drawable/schedule_mode" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/auto_image"
                app:srcCompat="@drawable/auto_mode" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.cardview.widget.CardView
            android:layout_width="208dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:text="@string/schedule_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/auto_mode_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/features_title_text"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:contentDescription="@string/toggle_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />


</androidx.constraintlayout.widget.ConstraintLayout>