<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page">
    <EditText
        android:id="@+id/username1"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:autofillHints="user name"
        android:hint="@string/username_login_text"
        android:inputType="textShortMessage"
        android:textColor="#000000"
        android:textColorHint="#C17373"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_below="@+id/username1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/password_login_text"
        android:inputType="textPassword"
        android:textColorHint="#B16262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username1"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/login_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:text="@string/loginhome_button"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"

        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="88dp"
        android:text="@string/smartblinds_login_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>