<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manual_page">

<!--    <Button-->
<!--        android:id="@+id/openButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="#7B1FA2"-->
<!--        android:fontFamily="sans-serif-black"-->
<!--        android:onClick="blindsUp" -->
<!--        android:text="Open"-->
<!--        android:textSize="50dp"-->
<!--        app:cornerRadius="0dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonPressConfirmation"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/closeButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="#7B1FA2"-->
<!--        android:fontFamily="sans-serif-black"-->
<!--        android:onClick="blindsDown"-->
<!--        android:text="Close"-->
<!--        android:textSize="50dp"-->
<!--        app:cornerRadius="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buttonPressConfirmation" />-->

    <TextView
        android:id="@+id/buttonPressConfirmation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="204dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="179dp"
                android:layout_height="185dp"
                android:layout_marginStart="115dp"
                android:contentDescription="@string/open_blinds"
                app:srcCompat="@drawable/up_arrow" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="409dp"
        android:layout_height="185dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPressConfirmation">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="179dp"
                android:layout_height="185dp"
                android:layout_marginStart="120dp"
                android:contentDescription="@string/close_blinds"
                app:srcCompat="@drawable/down_arrow" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="409dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/open_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPressConfirmation" />

</androidx.constraintlayout.widget.ConstraintLayout>